[package]
name = "promptize"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.22", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1"
trybuild = "1.0.80"

tiktoken-rs = "0.4.2"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.70"

[lib]
proc-macro = true
